refactor(system-design-patterns): fixing project structure